tests/typing/bad/testfile-depth.jl
function f()
	for x = 0:1
		y = 0
	end
	println(y)
end
f()
